@@ -1,6 +1,7 @@
 = Unreleased =
 # Updated
 - API library to 1.0.6.1
+- added error message in order edit page, when label generation ajax got error
 
 = 2.0.2 =
 # Fixed
